:bug: Fix Notes View NPE when creating notes
Null-guard note title/content/colour and selection lists so createNote
does not throw when auto notes or persisted notes supply null values.

Fixes #1528